--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y cmake ninja-build leveldb libsnappy-dev
+        sudo apt-get install -y cmake ninja-build libsnappy-dev
 
     - name: Check for Firebase config
       run: |
