--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Android Studio CI Build
+name: Android CI
 
 on:
   push:
@@ -10,52 +10,47 @@ on:
 
 jobs:
   build:
+    name: Build Android App
     runs-on: ubuntu-latest
 
+    env:
+      JAVA_HOME: /usr/lib/jvm/java-17-openjdk-amd64
+
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '17'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 17
 
-    - name: Set up Android SDK & NDK
-      uses: android-actions/setup-android@v3
+      - name: Cache Gradle packages
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle.kts', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y cmake ninja-build libsnappy-dev
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v2
+        with:
+          api-level: 33
+          build-tools-version: 33.0.2
+          ndk-version: 23.1.7779620
 
-    - name: Grant execute permission to Gradle
-      run: chmod +x ./gradlew
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
 
-    - name: Build project (как в Android Studio)
-      run: ./gradlew build --stacktrace --info
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug --stacktrace
 
-    - name: Build APK (релизная сборка)
-      run: ./gradlew assembleRelease --stacktrace --info
-
-    - name: Decode and restore keystore
-      run: echo "${{ secrets.BUILD_KEY }}" | base64 -d > buildKey.jks
-
-    - name: Sign APK
-      run: |
-        jarsigner -verbose -sigalg SHA256withRSA -digestalg SHA-256 \
-        -keystore buildKey.jks \
-        app/build/outputs/apk/release/app-release.apk alias_name
-      env:
-        STORE_PASSWORD: ${{ secrets.STORE_PASSWORD }}
-        KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
-
-    - name: Verify APK signature
-      run: jarsigner -verify -verbose -certs app/build/outputs/apk/release/app-release.apk
-
-    - name: Upload Signed APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: app-signed-release
-        path: app/build/outputs/apk/release/app-release.apk
+      - name: Upload Debug APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: debug-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
